removed old HTML stubs

--- a/views/layout.html
+++ b/views/layout.html
@@ -26,7 +26,7 @@
     <div class="topbar">
       <div class="fill">
         <div class="container">
-          <h3><a href="#">UlmApi.de LiveMap</a></h3>
+          <h3><a href="/map">UlmApi.de LiveMap</a></h3>
           <ul>
             <li <% if (type == "map") { %>class="active" <% } %>><a href="/map">Map</a></li>
             <li <% if (type == "about") { %>class="active" <% } %>><a href="/about">About</a></li>
