--- a/views/layout.html
+++ b/views/layout.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="/css/leaflet.css" />
 	<script type="text/javascript" src="/js/leaflet.js"></script>
 	<script type="text/javascript" src="/js/livemap.js"></script>
+	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <% } %>
     
   </head>
