updated icons, added vote button

--- a/views/layout.html
+++ b/views/layout.html
@@ -32,6 +32,7 @@
             <li <% if (type == "map") { %>class="active" <% } %>><a href="/map">Map</a></li>
             <li <% if (type == "about") { %>class="active" <% } %>><a href="/about">About</a></li>
           </ul>
+          <iframe style="margin-top:7px;float:right;background:rgba(255, 255, 255, 0.2);border-radius:3px" src="http://nodeknockout.com/iframe/ulmapi-de" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
         </div>
       </div>
     </div>
