--- a/views/container/about.html
+++ b/views/container/about.html
@@ -9,7 +9,7 @@
         <div class="span11">
           <h2>What is this?</h2>
           <p>The application visualizes the movement of public transportation vehicles in the City of Ulm, Germany. Due to missing live data provided by 
-          the authorities, we scrapped available data and converted them to the GTFS format. We then implemented a simple GTFS parser that emulates 
+          the authorities, we scraped available data and converted them to the GTFS format. We then implemented a simple GTFS parser that emulates 
           the emission of real time events, though based on the static schedule. We hope to evenutally switch the backend event emitter by real time data in the future.
           The emitted events are consumed by the web application, which renders a map and moves markers according to the estimated location of each vehicle.</p>
           <h2>Why?</h2>
