added service free period notice

--- a/public/css/livemap.css
+++ b/public/css/livemap.css
@@ -12,3 +12,12 @@ html,body,#content,#map {
 	float:right;
 	margin:10px 0px 0px 10px;
 }
+
+#warning {
+	position: relative; 
+	top: 150px; 
+	left: auto; 
+	margin: 0 auto; 
+	z-index: 999; 
+	display:none;
+}
