--- a/views/layout.html
+++ b/views/layout.html
@@ -44,12 +44,13 @@
 
 	<div id="warning" class="modal">
         <div class="modal-header">
-          <h3>Service free period</h3>
+          <h3>It's late night around here!</h3>
           <a onclick="javascript:$('#warning').hide();" class="close" href="#">×</a>
         </div>
         <div class="modal-body">
-          <p>Please note that the data set is from a German city, 
-			 so the schedule contains service-free periods in the night.</p>
+          <p>Please keep in mind that Ulm is on UTC+2, and it's not quite Berlin in terms of nightly public transportation service. Just adjust the clock to some time
+          during the day to see the magic, or <a href="https://secure.wikimedia.org/wikipedia/en/wiki/Ulmer_M%C3%BCnster">read a bit about that ridiculously ginormous 
+          church</a> we have over here.</p>
         </div>
         <div class="modal-footer">
           <a class="btn primary" href="#" onclick="javascript:$('#warning').hide();">Close</a>
