--- a/views/container/about.html
+++ b/views/container/about.html
@@ -10,7 +10,7 @@
           <h2>What is this?</h2>
           <p>This application visualizes public transportation vehicles moving through the City of Ulm, Germany. Since the transport authority does not provide
           a useable data feed, we decided to scrape the timetable data and converted them into the <a href="https://code.google.com/intl/de-DE/transit/spec/transit_feed_specification.html">
-          GTFS format. We then implemented a simple GTFS parser which emulates the emission of real time event information (though it's based on the static data
+          GTFS</a> format. We then implemented a simple GTFS parser which emulates the emission of real time event information (though it's based on the static data
           we liberated from their timetable prison. We hope to eventually switch the backend event emitter to realtime data in the future. If anybody out there
           knows someone working at the Stadtwerke Ulm, please prod them a little *nudge nudge*).
           The events emitted by the GTFS parser are consumed by the web application, which renders a map and moves markers according to the estimated location of each vehicle.</p>
