--- a/views/layout.html
+++ b/views/layout.html
@@ -48,8 +48,7 @@
           <a onclick="javascript:$('#warning').hide();" class="close" href="#">×</a>
         </div>
         <div class="modal-body">
-          <p>Please keep in mind that Ulm is on UTC+2, and it's not quite Berlin in terms of nightly public transportation service. Just adjust the clock to some time
-          during the day to see the magic, or <a href="https://secure.wikimedia.org/wikipedia/en/wiki/Ulmer_M%C3%BCnster">read a bit about that ridiculously ginormous 
+          <p>Please keep in mind that Ulm is on UTC+2, and it's not quite Berlin in terms of nightly public transportation service. Just check back later during the day to see the magic, or <a href="https://secure.wikimedia.org/wikipedia/en/wiki/Ulmer_M%C3%BCnster">read a bit about that ridiculously ginormous 
           church</a> we have over here.</p>
         </div>
         <div class="modal-footer">
